tests/fsharp/typecheck/sigs/neg13.bsl

neg13.fs(10,6,10,8): typecheck error FS0381: A type cannot have both the 'ReferenceEquality' and 'StructuralEquality' or 'StructuralComparison' attributes

neg13.fs(13,6,13,8): typecheck error FS0379: The 'StructuralComparison' attribute must be used in conjunction with the 'StructuralEquality' attribute

neg13.fs(16,6,16,8): typecheck error FS0380: The 'StructuralEquality' attribute must be used in conjunction with the 'NoComparison' or 'StructuralComparison' attributes

neg13.fs(19,6,19,8): typecheck error FS0379: The 'StructuralComparison' attribute must be used in conjunction with the 'StructuralEquality' attribute

neg13.fs(22,6,22,8): typecheck error FS0380: The 'StructuralEquality' attribute must be used in conjunction with the 'NoComparison' or 'StructuralComparison' attributes

neg13.fs(25,6,25,8): typecheck error FS0381: A type cannot have both the 'ReferenceEquality' and 'StructuralEquality' or 'StructuralComparison' attributes

neg13.fs(28,6,28,8): typecheck error FS0379: The 'StructuralComparison' attribute must be used in conjunction with the 'StructuralEquality' attribute

neg13.fs(31,6,31,8): typecheck error FS0380: The 'StructuralEquality' attribute must be used in conjunction with the 'NoComparison' or 'StructuralComparison' attributes

neg13.fs(34,6,34,8): typecheck error FS0379: The 'StructuralComparison' attribute must be used in conjunction with the 'StructuralEquality' attribute

neg13.fs(37,6,37,8): typecheck error FS0380: The 'StructuralEquality' attribute must be used in conjunction with the 'NoComparison' or 'StructuralComparison' attributes

neg13.fs(43,6,43,8): typecheck error FS0378: The 'NoEquality' attribute must be used in conjunction with the 'NoComparison' attribute

neg13.fs(47,6,47,8): typecheck error FS0344: The struct, record or union type 'Ru' has an explicit implementation of 'Object.GetHashCode' or 'Object.Equals'. You must apply the 'CustomEquality' attribute to the type

neg13.fs(47,6,47,8): typecheck error FS0346: The struct, record or union type 'Ru' has an explicit implementation of 'Object.Equals'. Consider implementing a matching override for 'Object.GetHashCode()'

neg13.fs(56,6,56,8): typecheck error FS0386: A type with attribute 'NoComparison' should not usually have an explicit implementation of 'System.IComparable', 'System.IComparable<_>' or 'System.Collections.IStructuralComparable'. Disable this warning if this is intentional for interoperability purposes

neg13.fs(56,6,56,8): typecheck error FS0344: The struct, record or union type 'Rv' has an explicit implementation of 'Object.GetHashCode' or 'Object.Equals'. You must apply the 'CustomEquality' attribute to the type

neg13.fs(56,6,56,8): typecheck error FS0346: The struct, record or union type 'Rv' has an explicit implementation of 'Object.Equals'. Consider implementing a matching override for 'Object.GetHashCode()'
